@@ -9,6 +9,9 @@
 #include "types.h"
 
 #include <unistd.h>
+#ifdef HAVE_STDLIB_H
+#include <stdlib.h>
+#endif
 #ifdef HAVE_SYS_TYPES_H
 #include <sys/types.h>
 #endif
@@ -763,6 +766,10 @@ static int dofilt(BW *bw, char *s, void *object, int *notify)
 	npartial(bw->parent->t->t);
 	ttclsn();
 	if (!fork()) {
+#ifdef HAVE_PUTENV
+		char		*fname, *name;
+		unsigned	len;
+#endif
 		signrm();
 		close(0);
 		close(1);
@@ -774,6 +781,15 @@ static int dofilt(BW *bw, char *s, void *object, int *notify)
 		close(fr[1]);
 		close(fw[1]);
 		close(fr[0]);
+#ifdef HAVE_PUTENV
+		fname = vsncpy(NULL, 0, sc("JOE_FILENAME="));
+		name = bw->b->name ? bw->b->name : "Unnamed";
+		if((len = slen(name)) >= 512)	/* limit filename length */
+			len = 512;
+		fname = vsncpy(sv(fname), name, len);
+		putenv(fname);
+		vsrm(fname);
+#endif
 		execl("/bin/sh", "/bin/sh", "-c", s, NULL);
 		_exit(0);
 	}
